include the local image-pusher credentials in all registry-push-credentials-ci-central secrets
Signed-off-by: Nikolaos Moraitis <nmoraiti@redhat.com>

--- a/core-services/ci-secret-bootstrap/_config.yaml
+++ b/core-services/ci-secret-bootstrap/_config.yaml
@@ -3428,6 +3428,9 @@ secret_configs:
       - auth_field: token_image-puller_arm01_reg_auth_value.txt
         item: build_farm
         registry_url: image-registry.openshift-image-registry.svc:5000
+      - auth_field: token_image-pusher_arm01_reg_auth_value.txt
+        item: build_farm
+        registry_url: image-registry.openshift-image-registry.svc:5000
       - auth_field: token_image-puller_arm01_reg_auth_value.txt
         item: build_farm
         registry_url: registry.arm-build01.arm-build.devcluster.openshift.com
@@ -3461,6 +3464,9 @@ secret_configs:
       - auth_field: token_image-pusher_app.ci_reg_auth_value.txt
         item: build_farm
         registry_url: registry.ci.openshift.org
+      - auth_field: token_image-pusher_build01_reg_auth_value.txt
+        item: build_farm
+        registry_url: image-registry.openshift-image-registry.svc.cluster.local:5000
       - auth_field: auth
         item: quay-io-push-credentials
         registry_url: quay.io/openshift/ci
@@ -3488,6 +3494,9 @@ secret_configs:
       - auth_field: token_image-pusher_app.ci_reg_auth_value.txt
         item: build_farm
         registry_url: registry.ci.openshift.org
+      - auth_field: token_image-pusher_build02_reg_auth_value.txt
+        item: build_farm
+        registry_url: image-registry.openshift-image-registry.svc.cluster.local:5000
       - auth_field: auth
         item: quay-io-push-credentials
         registry_url: quay.io/openshift/ci
@@ -3507,6 +3516,9 @@ secret_configs:
         item: build_farm
         registry_url: image-registry.openshift-image-registry.svc.cluster.local:5000
       - auth_field: token_image-puller_vsphere_reg_auth_value.txt
+        item: build_farm
+        registry_url: image-registry.openshift-image-registry.svc:5000
+      - auth_field: token_image-pusher_vsphere_reg_auth_value.txt
         item: build_farm
         registry_url: image-registry.openshift-image-registry.svc:5000
       - auth_field: token_image-puller_vsphere_reg_auth_value.txt
@@ -4422,6 +4434,9 @@ secret_configs:
       - auth_field: token_image-pusher_app.ci_reg_auth_value.txt
         item: build_farm
         registry_url: registry.ci.openshift.org
+      - auth_field: token_image-pusher_build03_reg_auth_value.txt
+        item: build_farm
+        registry_url: image-registry.openshift-image-registry.svc.cluster.local:5000
       - auth_field: auth
         item: quay-io-push-credentials
         registry_url: quay.io/openshift/ci
@@ -4488,6 +4503,9 @@ secret_configs:
       - auth_field: token_image-pusher_app.ci_reg_auth_value.txt
         item: build_farm
         registry_url: registry.ci.openshift.org
+      - auth_field: token_image-pusher_build04_reg_auth_value.txt
+        item: build_farm
+        registry_url: image-registry.openshift-image-registry.svc.cluster.local:5000
       - auth_field: auth
         item: quay-io-push-credentials
         registry_url: quay.io/openshift/ci
@@ -4554,6 +4572,9 @@ secret_configs:
       - auth_field: token_image-pusher_app.ci_reg_auth_value.txt
         item: build_farm
         registry_url: registry.ci.openshift.org
+      - auth_field: token_image-pusher_build05_reg_auth_value.txt
+        item: build_farm
+        registry_url: image-registry.openshift-image-registry.svc.cluster.local:5000
       - auth_field: auth
         item: quay-io-push-credentials
         registry_url: quay.io/openshift/ci
@@ -4938,6 +4959,9 @@ secret_configs:
       - auth_field: token_image-pusher_app.ci_reg_auth_value.txt
         item: build_farm
         registry_url: registry.ci.openshift.org
+      - auth_field: token_image-pusher_multi01_reg_auth_value.txt
+        item: build_farm
+        registry_url: image-registry.openshift-image-registry.svc.cluster.local:5000
       - auth_field: auth
         item: quay-io-push-credentials
         registry_url: quay.io/openshift/ci
@@ -5015,6 +5039,9 @@ secret_configs:
       - auth_field: token_image-pusher_app.ci_reg_auth_value.txt
         item: build_farm
         registry_url: registry.ci.openshift.org
+      - auth_field: token_image-pusher_build08_reg_auth_value.txt
+        item: build_farm
+        registry_url: image-registry.openshift-image-registry.svc.cluster.local:5000
       - auth_field: auth
         item: quay-io-push-credentials
         registry_url: quay.io/openshift/ci
@@ -5095,6 +5122,9 @@ secret_configs:
         item: build_farm
         registry_url: image-registry.openshift-image-registry.svc.cluster.local:5000
       - auth_field: token_image-puller_vsphere02_reg_auth_value.txt
+        item: build_farm
+        registry_url: image-registry.openshift-image-registry.svc:5000
+      - auth_field: token_image-pusher_vsphere02_reg_auth_value.txt
         item: build_farm
         registry_url: image-registry.openshift-image-registry.svc:5000
       - auth_field: token_image-puller_vsphere02_reg_auth_value.txt
