use job cucushift-installer-rehearse-azure-ipi-cco-manual-workload-identity-tp

--- a/ci-operator/step-registry/cucushift/installer/rehearse/azure/ipi/cco-manual-workload-identity/tp/cucushift-installer-rehearse-azure-ipi-cco-manual-workload-identity-tp-workflow.yaml
+++ b/ci-operator/step-registry/cucushift/installer/rehearse/azure/ipi/cco-manual-workload-identity/tp/cucushift-installer-rehearse-azure-ipi-cco-manual-workload-identity-tp-workflow.yaml
@@ -2,6 +2,7 @@ workflow:
   as:  cucushift-installer-rehearse-azure-ipi-cco-manual-workload-identity-tp
   steps:
     pre:
+      - ref: cucushift-helper-service-build-info
       - chain:  cucushift-installer-rehearse-azure-ipi-cco-manual-workload-identity-provision
     post:
       - chain:  cucushift-installer-rehearse-azure-ipi-cco-manual-workload-identity-deprovision
