--- a/ci-operator/config/calebevans/spring-boot-openshift-interop-tests/calebevans-spring-boot-openshift-interop-tests-dockerfile-update__springboot-ocp4.14-lp-interop.yaml
+++ b/ci-operator/config/calebevans/spring-boot-openshift-interop-tests/calebevans-spring-boot-openshift-interop-tests-dockerfile-update__springboot-ocp4.14-lp-interop.yaml
@@ -14,7 +14,7 @@ images:
   inputs:
     cli:
       paths:
-      - destination_dir: usr/bin/oc
+      - destination_dir: .
         source_path: /usr/bin/oc
   to: springboot-runner
 releases:
