--- a/ci-operator/config/openshift/installer/openshift-installer-release-4.15.yaml
+++ b/ci-operator/config/openshift/installer/openshift-installer-release-4.15.yaml
@@ -572,6 +572,12 @@ tests:
     cluster_profile: vsphere
     workflow: openshift-e2e-vsphere-upi
   timeout: 6h0m0s
+- as: e2e-vsphere-platform-external-no-ccm
+  optional: true
+  steps:
+    cluster_profile: vsphere
+    workflow: upi-vsphere-platform-external-ccm
+  timeout: 6h0m0s
 - as: e2e-vsphere-upi-zones
   optional: true
   run_if_changed: (^(upi/vsphere/.*)|^(images/installer/Dockerfile\.upi.*))
