allow external CCM to be enabled

--- a/ci-operator/config/openshift/installer/openshift-installer-release-4.14.yaml
+++ b/ci-operator/config/openshift/installer/openshift-installer-release-4.14.yaml
@@ -577,7 +577,18 @@ tests:
   optional: true
   steps:
     cluster_profile: vsphere
-    workflow: upi-vsphere-platform-external-ccm
+    env:
+      PLATFORM_NAME: vsphere
+    workflow: opct-test-platform-external-vsphere
+  timeout: 6h0m0s
+- as: e2e-vsphere-platform-external-ccm
+  optional: true
+  steps:
+    cluster_profile: vsphere
+    env:
+      EXTERNAL_CCM: enabled
+      PLATFORM_NAME: vsphere
+    workflow: opct-test-platform-external-vsphere
   timeout: 6h0m0s
 - as: e2e-vsphere-upi-zones
   optional: true
