--- a/ci-operator/step-registry/upi/conf/vsphere/platform-none/upi-conf-vsphere-platform-none-ref.yaml
+++ b/ci-operator/step-registry/upi/conf/vsphere/platform-none/upi-conf-vsphere-platform-none-ref.yaml
@@ -12,5 +12,7 @@ ref:
   env:
     - name: PLATFORM_NAME
       default: none
+    - name: EXTERNAL_CCM
+      default: disabled
   documentation: |-
     The upi-conf-platform-none step modifies the platform type in the install-config for bringing up a platform none cluster.
