cnf-features-deploy updates for release-4.14 branch cut
Signed-off-by: Nishant Parekh <nparekh@redhat.com>

--- a/ci-operator/config/openshift-kni/cnf-features-deploy/openshift-kni-cnf-features-deploy-release-4.14.yaml
+++ b/ci-operator/config/openshift-kni/cnf-features-deploy/openshift-kni-cnf-features-deploy-release-4.14.yaml
@@ -1,10 +1,10 @@
 base_images:
   base:
-    name: "4.15"
+    name: "4.14"
     namespace: ocp
     tag: base
   base-9:
-    name: "4.15"
+    name: "4.14"
     namespace: ocp
     tag: base-rhel9
   openshift_release_golang-1.19:
@@ -41,18 +41,18 @@ images:
       - registry.ci.openshift.org/openshift/release:golang-1.19
   to: ztp-site-generator
 promotion:
-  name: "4.15"
+  name: "4.14"
   namespace: ocp-kni
 releases:
   initial:
     integration:
-      name: "4.15"
+      name: "4.14"
       namespace: ocp
   latest:
     candidate:
       product: ocp
       stream: ci
-      version: "4.15"
+      version: "4.14"
 resources:
   '*':
     requests:
@@ -109,6 +109,6 @@ tests:
           memory: 200Mi
     workflow: openshift-e2e-gcp-ovn
 zz_generated_metadata:
-  branch: master
+  branch: release-4.14
   org: openshift-kni
   repo: cnf-features-deploy
