--- a/ci-operator/config/openshift/backplane-cli/openshift-backplane-cli-main.yaml
+++ b/ci-operator/config/openshift/backplane-cli/openshift-backplane-cli-main.yaml
@@ -25,7 +25,7 @@ tests:
     make test
   container:
     from: src
-- as: scan
+- as: scan-optional
   commands: make scan
   container:
     from: src
