--- a/ci-operator/jobs/openshift/backplane-cli/openshift-backplane-cli-main-presubmits.yaml
+++ b/ci-operator/jobs/openshift/backplane-cli/openshift-backplane-cli-main-presubmits.yaml
@@ -201,21 +201,21 @@ presubmits:
     - ^main$
     - ^main-
     cluster: build03
-    context: ci/prow/scan
+    context: ci/prow/scan-optional
     decorate: true
     labels:
       ci.openshift.io/generator: prowgen
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-openshift-backplane-cli-main-scan
+    name: pull-ci-openshift-backplane-cli-main-scan-optional
     optional: true
-    rerun_command: /test scan
+    rerun_command: /test scan-optional
     spec:
       containers:
       - args:
         - --gcs-upload-secret=/secrets/gcs/service-account.json
         - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
         - --report-credentials-file=/etc/report/credentials
-        - --target=scan
+        - --target=scan-optional
         command:
         - ci-operator
         image: ci-operator:latest
@@ -242,7 +242,7 @@ presubmits:
       - name: result-aggregator
         secret:
           secretName: result-aggregator
-    trigger: (?m)^/test( | .* )scan,?($|\s.*)
+    trigger: (?m)^/test( | .* )scan-optional,?($|\s.*)
   - agent: kubernetes
     always_run: true
     branches:
