Testing ArgoCD CRD upgrade
Signed-off-by: varshab1210 <varshab1210@gmail.com>

--- a/core-services/sanitize-prow-jobs/_config.yaml
+++ b/core-services/sanitize-prow-jobs/_config.yaml
@@ -6368,6 +6368,7 @@ buildFarm:
       - redhat-developer-jenkins-operator-main-presubmits.yaml
       - redhat-developer-service-binding-operator-release-v1.1.x-presubmits.yaml
       - redhat-developer-gitops-backend-master-presubmits.yaml
+      - redhat-developer-gitops-operator-v1beta1-presubmits.yaml
       - redhat-developer-service-binding-operator-release-v1.3.x-periodics.yaml
       - redhat-appstudio-e2e-tests-main-presubmits.yaml
       - redhat-openshift-ecosystem-certified-operators-preprod-ocp-4.6-periodics.yaml
