checking operator-sdk version
Signed-off-by: varshab1210 <varshab1210@gmail.com>

--- a/ci-operator/config/redhat-developer/gitops-operator/redhat-developer-gitops-operator-v1beta1__v4.12.yaml
+++ b/ci-operator/config/redhat-developer/gitops-operator/redhat-developer-gitops-operator-v1beta1__v4.12.yaml
@@ -61,8 +61,10 @@ tests:
     test:
     - as: install
       cli: latest
-      commands: "operator-sdk run bundle --gzip-configmap=true -n openshift-operators
-        \"$OO_BUNDLE\"\noc get pods -n openshift-operators \n"
+      commands: |
+        operator-sdk version
+        operator-sdk run bundle --gzip-configmap=true -n openshift-operators "$OO_BUNDLE"
+        oc get pods -n openshift-operators
       dependencies:
       - env: OO_BUNDLE
         name: gitops-operator-bundle
