--- a/ci-operator/jobs/openshift/assisted-service/openshift-assisted-service-release-ocm-2.9-presubmits.yaml
+++ b/ci-operator/jobs/openshift/assisted-service/openshift-assisted-service-release-ocm-2.9-presubmits.yaml
@@ -1513,7 +1513,7 @@ presubmits:
           secretName: result-aggregator
     trigger: (?m)^/test( | .* )mce-images,?($|\s.*)
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - ^release-ocm-2\.9$
     - ^release-ocm-2\.9-
