add recycle Quay GCP Storage

--- a/ci-operator/config/quay/quay-tests/quay-quay-tests-master.yaml
+++ b/ci-operator/config/quay/quay-tests/quay-quay-tests-master.yaml
@@ -103,6 +103,8 @@ tests:
       BASE_DOMAIN: qe.devcluster.openshift.com
       COMPUTE_NODE_TYPE: m5.2xlarge
       QUAY_OPERATOR_CHANNEL: stable-3.9
+    post:
+    - ref: quay-tests-recycle-quay-gcp
     test:
     - ref: quay-tests-deploy-quay-gcp
     - ref: quay-tests-test-quay-e2e
