--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.13__amd64-stable.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.13__amd64-stable.yaml
@@ -240,19 +240,19 @@ tests:
   steps:
     cluster_profile: aws-sd-qe
     env:
-      CLUSTER_SECTOR: canary
+      ENABLE_SECTOR: "true"
       E2E_RUN_TAGS: '@amd64 and @aws-ipi and @rosa and @network-ovnkubernetes and
         @hypershift-hosted and @critical and not @fips'
-      OCM_LOGIN_ENV: production
+      OCM_LOGIN_ENV: staging
       OPENSHIFT_VERSION: "4.13"
       REGION: us-east-1
-      ROSA_LOGIN_ENV: production
+      ROSA_LOGIN_ENV: staging
       TAG_VERSION: '@4.13'
       TEST_FILTERS: ~ChkUpgrade&;~NonPreRelease&;~Serial&;~Disruptive&;~DisconnectedOnly&;~HyperShiftMGMT&;~MicroShiftOnly&;~NonHyperShiftHOST&;ROSA&
       TEST_IMPORTANCE: Critical
     test:
     - chain: openshift-e2e-test-hypershift-qe
-    workflow: rosa-aws-sts-hypershift-sector
+    workflow: rosa-aws-sts-hypershift
 - as: aws-usgov-ipi-private-sts-f14
   cron: 21 14 4,19 * *
   steps:
