--- a/ci-operator/config/kata-containers/kata-containers/kata-containers-kata-containers-main__next.yaml
+++ b/ci-operator/config/kata-containers/kata-containers/kata-containers-kata-containers-main__next.yaml
@@ -38,6 +38,7 @@ tests:
     allow_skip_on_success: true
     cluster_profile: azure4
     env:
+      TEST_ARGS: ' --max-parallel-tests 5 '
       TEST_SKIPS: \[sig-api-machinery\]\|\[sig-apps\]\|\[sig-arch\]\|\[sig-auth\]\|\[sig-autoscaling\]\|\[sig-builds\]\|\[sig-ci\]\|\[sig-cli\]\|\[sig-cloud-provider\]\|\[sig-cluster-lifecycle\]\|\[sig-coreos\]\|\[sig-devex\]\|\[sig-etcd\]\|\[sig-imageregistry\]\|\[sig-installer\]\|\[sig-instrumentation\]\|\[sig-kubevirt\]\|\[sig-network-edge\]\|\[sig-operator\]\|\[sig-scheduling\]\|\[sig-storage\]\|\[sig-node\]
         Security Context should support seccomp runtime/default\|\[sig-node\] Variable
         Expansion should allow substituting values in a volume subpath\|\[sig-node\]
@@ -53,7 +54,8 @@ tests:
         PodOSRejection \[NodeConformance\] Kubelet should reject pod when the node
         OS doesn't match pod's OS\|\[sig-node\] Probing container should be restarted
         with a GRPC liveness probe\|\[sig-network\].*for evicted pods\|\[sig-network\].*HAProxy\|\[sig-network\].*bond\|\[sig-network\].*all
-        sysctl on whitelist\|\[sig-network\].*sysctls should not affect
+        sysctl on whitelist\|\[sig-network\].*sysctls should not affect\|\[sig-network\]
+        pods should successfully create sandboxes by adding pod to network
     pre:
     - chain: ipi-azure-pre
     - as: kata-containers-e2e-pre
