--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -3,43 +3,11 @@ base_images:
     name: release
     namespace: openshift
     tag: golang-1.19
-  trilliandb:
-    name: trillian-db
-    namespace: securesign
-    tag: redhat-v1.5.2
 build_root:
   image_stream_tag:
     name: builder
     namespace: ocp
     tag: rhel-9-golang-1.20-openshift-4.14
-images:
-- dockerfile_literal: |
-    FROM registry.access.redhat.com/ubi8
-    FROM src AS repo
-    FROM golang AS golayer
-    USER root
-    FROM trilliandb
-    COPY --from=golayer /usr/local/go/ /usr/local/go/
-    COPY --from=repo /go/src/github.com/securesign/trillian /go/src/github.com/securesign/trillian
-    ENV PATH=$PATH:/usr/local/go/bin
-    ENV MYSQL_USER=test
-    ENV MYSQL_PASSWORD=zaphod
-    ENV MYSQL_DATABASE=test
-    ENV mysql_flags="-pzaphod -utest"
-    USER 27
-    ENTRYPOINT ["container-entrypoint"]
-    CMD ["run-mysqld"]
-  inputs:
-    openshift_release_golang-1.19:
-      as:
-      - golang
-    src:
-      as:
-      - src
-    trilliandb:
-      as:
-      - trilliandb
-  to: src-db
 releases:
   initial:
     integration:
@@ -59,12 +27,9 @@ resources:
       memory: 200Mi
 tests:
 - as: integration
-  commands: |
-    mysqladmin -uroot ping
-    cd /go/src/github.com/securesign/trillian/
-    ./integration/integration_test.sh
+  commands: go test $(go list ./... | grep -v /storage/ |  grep -v /client/ ) 
   container:
-    from: src-db
+    from: src
 zz_generated_metadata:
   branch: release-next
   org: securesign
