--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -26,7 +26,7 @@ resources:
       cpu: 100m
       memory: 200Mi
 tests:
-- as: integration
+- as: unit
   commands: go test $(go list ./... | grep -v /storage/ |  grep -v /client/ ) 
   container:
     from: src
