--- a/ci-operator/config/securesign/trillian/securesign-trillian-redhat-v1.5.2.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-redhat-v1.5.2.yaml
@@ -31,6 +31,6 @@ tests:
   container:
     from: src
 zz_generated_metadata:
-  branch: release-next
+  branch: redhat-v1.5.2
   org: securesign
   repo: trillian
