--- a/ci-operator/jobs/securesign/trillian/securesign-trillian-redhat-v1.5.2-presubmits.yaml
+++ b/ci-operator/jobs/securesign/trillian/securesign-trillian-redhat-v1.5.2-presubmits.yaml
@@ -3,8 +3,8 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - ^release-next$
-    - ^release-next-
+    - ^redhat-v1\.5\.2$
+    - ^redhat-v1\.5\.2-
     cluster: build01
     context: ci/prow/unit
     decorate: true
@@ -13,7 +13,7 @@ presubmits:
     labels:
       ci.openshift.io/generator: prowgen
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-securesign-trillian-release-next-unit
+    name: pull-ci-securesign-trillian-redhat-v1.5.2-unit
     rerun_command: /test unit
     spec:
       containers:
