--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -27,7 +27,9 @@ resources:
       memory: 200Mi
 tests:
 - as: unit
-  commands: go test $(go list ./... | grep -v /storage/ |  grep -v /client/ )
+  commands: | 
+    go mod vendor
+    go test $(go list ./... | grep -v /storage/ |  grep -v /client/ )
   container:
     from: src
 zz_generated_metadata:
