--- a/ci-operator/config/redhat-developer/gitops-operator/redhat-developer-gitops-operator-v1beta1__v4.13.yaml
+++ b/ci-operator/config/redhat-developer/gitops-operator/redhat-developer-gitops-operator-v1beta1__v4.13.yaml
@@ -63,7 +63,7 @@ tests:
       cli: latest
       commands: |
         operator-sdk version
-        operator-sdk run bundle --gzip-configmap=true -n openshift-operators "$OO_BUNDLE"
+        operator-sdk run bundle   -n openshift-operators "$OO_BUNDLE"
         oc get pods -n openshift-operators
       dependencies:
       - env: OO_BUNDLE
@@ -96,7 +96,7 @@ tests:
     test:
     - as: install
       cli: latest
-      commands: "operator-sdk run bundle --gzip-configmap=true -n openshift-operators
+      commands: "operator-sdk run bundle   -n openshift-operators
         \"$OO_BUNDLE\"\noc get pods -n openshift-operators \n"
       dependencies:
       - env: OO_BUNDLE
@@ -142,7 +142,7 @@ tests:
     test:
     - as: install
       cli: latest
-      commands: "operator-sdk run bundle --gzip-configmap=true -n openshift-operators
+      commands: "operator-sdk run bundle   -n openshift-operators
         \"$OO_BUNDLE\"\noc get pods -n openshift-operators \n"
       dependencies:
       - env: OO_BUNDLE
@@ -175,7 +175,7 @@ tests:
     test:
     - as: install
       cli: latest
-      commands: "operator-sdk run bundle --gzip-configmap=true -n openshift-operators
+      commands: "operator-sdk run bundle   -n openshift-operators
         \"$OO_BUNDLE\"\noc get pods -n openshift-operators \n"
       dependencies:
       - env: OO_BUNDLE
