vSphere 8 to vlan configuration

--- a/core-services/prow/02_config/_boskos.yaml
+++ b/core-services/prow/02_config/_boskos.yaml
@@ -1409,19 +1409,21 @@ resources:
   state: free
   type: powervs-2-quota-slice
 - names:
-  - ci-segment-200
-  - ci-segment-201
-  - ci-segment-202
-  - ci-segment-203
-  - ci-segment-205
-  - ci-segment-206
-  - ci-segment-207
-  - ci-segment-208
-  - ci-segment-209
-  - ci-segment-210
-  - ci-segment-211
-  - ci-segment-212
-  - ci-segment-213
+  - ci-vlan-1153
+  - ci-vlan-1179
+  - ci-vlan-1211
+  - ci-vlan-1252
+  - ci-vlan-1256
+  - ci-vlan-1261
+  - ci-vlan-1262
+  - ci-vlan-1263
+  - ci-vlan-1265
+  - ci-vlan-1283
+  - ci-vlan-1285
+  - ci-vlan-1305
+  - ci-vlan-1309
+  - ci-vlan-758
+  - ci-vlan-902
   state: free
   type: vsphere-8-quota-slice
 - names:
