Addressing CI failure
Signed-off-by: varshab1210 <varshab1210@gmail.com>

--- a/ci-operator/config/redhat-developer/gitops-operator/redhat-developer-gitops-operator-v1beta1__v4.12.yaml
+++ b/ci-operator/config/redhat-developer/gitops-operator/redhat-developer-gitops-operator-v1beta1__v4.12.yaml
@@ -96,8 +96,8 @@ tests:
     test:
     - as: install
       cli: latest
-      commands: "operator-sdk run bundle   -n openshift-operators
-        \"$OO_BUNDLE\"\noc get pods -n openshift-operators \n"
+      commands: "operator-sdk run bundle   -n openshift-operators \"$OO_BUNDLE\"\noc
+        get pods -n openshift-operators \n"
       dependencies:
       - env: OO_BUNDLE
         name: gitops-operator-bundle
@@ -142,8 +142,8 @@ tests:
     test:
     - as: install
       cli: latest
-      commands: "operator-sdk run bundle   -n openshift-operators
-        \"$OO_BUNDLE\"\noc get pods -n openshift-operators \n"
+      commands: "operator-sdk run bundle   -n openshift-operators \"$OO_BUNDLE\"\noc
+        get pods -n openshift-operators \n"
       dependencies:
       - env: OO_BUNDLE
         name: gitops-operator-bundle
@@ -175,8 +175,8 @@ tests:
     test:
     - as: install
       cli: latest
-      commands: "operator-sdk run bundle   -n openshift-operators
-        \"$OO_BUNDLE\"\noc get pods -n openshift-operators \n"
+      commands: "operator-sdk run bundle   -n openshift-operators \"$OO_BUNDLE\"\noc
+        get pods -n openshift-operators \n"
       dependencies:
       - env: OO_BUNDLE
         name: gitops-operator-bundle
