test login permission for build info

--- a/ci-operator/step-registry/cucushift/installer/rehearse/azure/ipi/cco-manual-workload-identity/provision/cucushift-installer-rehearse-azure-ipi-cco-manual-workload-identity-provision-chain.yaml
+++ b/ci-operator/step-registry/cucushift/installer/rehearse/azure/ipi/cco-manual-workload-identity/provision/cucushift-installer-rehearse-azure-ipi-cco-manual-workload-identity-provision-chain.yaml
@@ -1,6 +1,7 @@
 chain:
   as:  cucushift-installer-rehearse-azure-ipi-cco-manual-workload-identity-provision
   steps: 
+  - ref: cucushift-helper-service-build-info
   - chain: ipi-conf-azure
   - ref: ipi-conf-manual-creds
   - ref: ipi-conf-azure-oidc-creds-provision
