--- a/ci-operator/step-registry/hypershift/mce/agent/create/agentserviceconfig/hypershift-mce-agent-create-agentserviceconfig-ref.yaml
+++ b/ci-operator/step-registry/hypershift/mce/agent/create/agentserviceconfig/hypershift-mce-agent-create-agentserviceconfig-ref.yaml
@@ -11,6 +11,6 @@ ref:
   env:
   - name: DISCONNECTED
     default: "false"
-    documentation: Should we work on top of a disconnected environment
+    documentation: Should we work on top of a disconnected environment xxx
   documentation: |-
     scale up the NodePool
