Correcting workflow for 4.14
Signed-off-by: varshab1210 <varshab1210@gmail.com>

--- a/ci-operator/config/redhat-developer/gitops-operator/redhat-developer-gitops-operator-master__v4.14.yaml
+++ b/ci-operator/config/redhat-developer/gitops-operator/redhat-developer-gitops-operator-master__v4.14.yaml
@@ -51,6 +51,7 @@ tests:
 - as: kuttl-sequential
   skip_if_only_changed: ^docs/|\.(md|adoc)$|^(README|LICENSE|OWNERS)$
   steps:
+    cluster_profile: aws
     env:
       INSTALL_NAMESPACE: openshift-gitops-operator
     test:
@@ -83,6 +84,7 @@ tests:
 - as: kuttl-parallel
   skip_if_only_changed: ^docs/|\.(md|adoc)$|^(README|LICENSE|OWNERS)$
   steps:
+    cluster_profile: aws
     env:
       INSTALL_NAMESPACE: openshift-gitops-operator
     test:
@@ -128,6 +130,7 @@ tests:
 - as: periodic-kuttl-sequential
   cron: 0 0 * * *
   steps:
+    cluster_profile: aws
     env:
       INSTALL_NAMESPACE: openshift-gitops-operator
     test:
@@ -160,6 +163,7 @@ tests:
 - as: periodic-kuttl-parallel
   cron: 0 0 * * *
   steps:
+    cluster_profile: aws
     env:
       INSTALL_NAMESPACE: openshift-gitops-operator
     test:
