updating aws-ipi steps to use openshift-cli-installer

--- a/ci-operator/step-registry/addons-and-operators/aws/ipi/addons-and-operators-aws-ipi-workflow.yaml
+++ b/ci-operator/step-registry/addons-and-operators/aws/ipi/addons-and-operators-aws-ipi-workflow.yaml
@@ -3,19 +3,21 @@ workflow:
   steps:
     allow_best_effort_post_steps: true
     env:
+      S3_BUCKET_NAME: openshift-cli-installer
+      S3_BUCKET_PATH: openshift-ci
       API_HOST: stage
       PARALLEL: "true"
       FIREWATCH_JIRA_SERVER: https://issues.redhat.com
     post:
-    - chain: ipi-aws-post
-    - ref : firewatch-report-issues
+    - ref: cluster-uninstall
+    -  ref : firewatch-report-issues
     pre:
-    - chain: ipi-aws-pre
-    - ref: operator-install
+    - ref: cluster-install
     - ref: addon-install
+    - ref: operator-install
   documentation: |-
-    This workflow provision an OpenShift IPI cluster with default configurations on AWS. 
-    The cluster is set with telemetry step generates a "${SHARED_DIR}/manifest_cluster-monitoring-config.yaml" manifest, and 
-    generates the AWS-specific install-config.yaml contents based on the cluster profile, located in "${SHARED_DIR}/install-config.yaml".
-    It then install required addons and operators on the cluster.
-    After finish testing, console logs from AWS instances will be gathered and the cluster will be deprovisioned.
+    This workflow provisions/de-provisions an OpenShift IPI cluster based on the provided
+    cluster config as an environment variable (see cluster-install step for more information)
+    as well as installing addons and operators on the target cluster based on the provided addons and operators
+    config as environment variables (see addon-install and operator-install steps for more information).
+    Cluster data will be available under $SHARED_DIR after setup.
