--- a/ci-operator/jobs/openshift/oadp-operator/openshift-oadp-operator-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/oadp-operator/openshift-oadp-operator-master-presubmits.yaml
@@ -749,6 +749,7 @@ presubmits:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-oadp-operator-master-4.11-operator-unit-test
     rerun_command: /test 4.11-operator-unit-test
+    run_if_changed: .+\.go|go\.(\bmod\b|\bsum\b)|Makefile|Dockerfile|.*\.ya{0,1}ml|build/.+
     spec:
       containers:
       - args:
