--- a/ci-operator/config/openshift/release/openshift-release-master__nightly-4.14.yaml
+++ b/ci-operator/config/openshift/release/openshift-release-master__nightly-4.14.yaml
@@ -330,7 +330,7 @@ tests:
 - as: e2e-vsphere-ovn
   interval: 164h
   steps:
-    cluster_profile: vsphere-8
+    cluster_profile: vsphere-8-vpn
     env:
       TEST_SKIPS: provisioning should mount multiple PV pointing to the same storage
         on the same node
