--- a/ci-operator/jobs/openshift/release/openshift-release-master-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-master-periodics.yaml
@@ -63780,7 +63780,7 @@ periodics:
       secret:
         secretName: result-aggregator
 - agent: kubernetes
-  cluster: vsphere
+  cluster: vsphere02
   decorate: true
   decoration_config:
     skip_cloning: true
@@ -63791,7 +63791,7 @@ periodics:
   interval: 164h
   labels:
     ci-operator.openshift.io/cloud: vsphere
-    ci-operator.openshift.io/cloud-cluster-profile: vsphere-8
+    ci-operator.openshift.io/cloud-cluster-profile: vsphere-8-vpn
     ci-operator.openshift.io/variant: nightly-4.14
     ci.openshift.io/generator: prowgen
     ci.openshift.io/no-builds: "true"
