--- a/ci-operator/step-registry/ipi/install/powervs/ipi-install-powervs-chain.yaml
+++ b/ci-operator/step-registry/ipi/install/powervs/ipi-install-powervs-chain.yaml
@@ -4,6 +4,7 @@ chain:
   - ref: ipi-install-rbac
   - ref: openshift-cluster-bot-rbac
   - ref: ipi-install-powervs-install
+  - ref: enable-qe-catalogsource
   - ref: ipi-install-times-collection
   documentation: |-
     The IPI install step chain contains all the individual steps necessary to install an OpenShift cluster.
