--- a/ci-operator/config/openshift/verification-tests/openshift-verification-tests-master__installer-rehearse-4.14.yaml
+++ b/ci-operator/config/openshift/verification-tests/openshift-verification-tests-master__installer-rehearse-4.14.yaml
@@ -40,15 +40,15 @@ tests:
 - as: installer-rehearse-debug
   cron: '@yearly'
   steps:
-    cluster_profile: aws-qe
+    cluster_profile: azure-qe
     env:
-      BASE_DOMAIN: qe.devcluster.openshift.com
-      SLEEP_DURATION: 2h
+      BASE_DOMAIN: qe.azure.devcluster.openshift.com
+      SLEEP_DURATION: 4h
     post:
     - ref: cucushift-installer-wait
-    - chain: cucushift-installer-rehearse-aws-ipi-deprovision
+    - chain: cucushift-installer-rehearse-azure-mag-ipi-fullyprivate-deprovision
     pre:
-    - chain: cucushift-installer-rehearse-aws-ipi-provision
+    - chain: cucushift-installer-rehearse-azure-mag-ipi-fullyprivate-provision
 - as: installer-rehearse-aws
   cron: '@yearly'
   steps:
