--- a/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
+++ b/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
@@ -151,6 +151,7 @@ tests:
       CNV_PRERELEASE_VERSION: "4.14"
       ODF_OPERATOR_SUB_CHANNEL: stable-4.13
     workflow: hypershift-kubevirt-baremetalds-conformance
+  timeout: 8h0m0s
 - as: e2e-kubevirt-mce-baremetalds-conformance
   cron: 0 4 * * *
   steps:
