--- a/ci-operator/step-registry/baremetal/lab/agent/conf/disconnected/proxy/baremetal-lab-agent-conf-disconnected-proxy-chain.yaml
+++ b/ci-operator/step-registry/baremetal/lab/agent/conf/disconnected/proxy/baremetal-lab-agent-conf-disconnected-proxy-chain.yaml
@@ -6,7 +6,7 @@ chain:
     - ref: baremetal-lab-pre-load-balancer
     - ref: baremetal-lab-pre-dns
     - ref: baremetal-lab-pre-firewall
-    - chain: mirror-images-by-oc-adm
+    - ref: ipi-install-rbac
     - ref: ipi-conf
     - ref: ipi-conf-telemetry
     - ref: ipi-conf-mirror
