--- a/ci-operator/config/opendatahub-io/notebooks/opendatahub-io-notebooks-main.yaml
+++ b/ci-operator/config/opendatahub-io/notebooks/opendatahub-io-notebooks-main.yaml
@@ -47,6 +47,10 @@ images:
   dockerfile_path: Dockerfile
   from: base-ubi8-python-3.8
   to: runtime-pytorch-ubi8-python-3.8
+- context_dir: jupyter/trustyai/ubi8-python-3.8
+  dockerfile_path: Dockerfile
+  from: jupyter-datascience-ubi8-python-3.8
+  to: jupyter-trustyai-ubi8-python-3.8
 - context_dir: runtimes/tensorflow/ubi8-python-3.8
   dockerfile_path: Dockerfile
   from: cuda-ubi8-python-3.8
