ocpbugs-18544: update instance size and add conformance for cno gcp upgrade

--- a/ci-operator/config/openshift/cluster-network-operator/openshift-cluster-network-operator-master.yaml
+++ b/ci-operator/config/openshift/cluster-network-operator/openshift-cluster-network-operator-master.yaml
@@ -69,6 +69,9 @@ tests:
   optional: true
   steps:
     cluster_profile: gcp
+    env:
+      FAIL_ON_CORE_DUMP: "true"
+      TEST_TYPE: upgrade-conformance
     workflow: openshift-upgrade-gcp-ovn
 - as: e2e-aws-sdn-upgrade
   optional: true
