--- a/ci-operator/step-registry/openshift/upgrade/gcp/ovn-rt/openshift-upgrade-gcp-ovn-rt-workflow.yaml
+++ b/ci-operator/step-registry/openshift/upgrade/gcp/ovn-rt/openshift-upgrade-gcp-ovn-rt-workflow.yaml
@@ -24,6 +24,7 @@ workflow:
       TEST_UPGRADE_OPTIONS: ""
       RT_ENABLED: "true"
       COMPUTE_NODE_TYPE: n2-standard-8
+      SIZE_VARIANT: large
   documentation: |-
     The Openshift E2E GCP OVN Realtime Kernel workflow executes the upgrade end-to-end test suite on GCP with a default cluster
     configuration and Loki as log collector, exercising an upgrade during the process.
