feat: update step-registry to use upstream tests
Signed-off-by: Vibhu Prashar <vibhu.sharma2929@gmail.com>

--- a/ci-operator/config/openshift-power-monitoring/kepler-operator/openshift-power-monitoring-kepler-operator-v1alpha1.yaml
+++ b/ci-operator/config/openshift-power-monitoring/kepler-operator/openshift-power-monitoring-kepler-operator-v1alpha1.yaml
@@ -13,6 +13,7 @@ build_root:
     name: builder
     namespace: ocp
     tag: rhel-8-golang-1.20-openshift-4.14
+canonical_go_repository: github.com/sustainable-computing-io/kepler-operator
 images:
 - build_args:
   - name: TARGETOS
@@ -57,9 +58,9 @@ tests:
       commands: |
         operator-sdk run bundle -n openshift-operators "$OO_BUNDLE"
         oc wait --for condition=Available -n openshift-operators \
-        --timeout=300s deployment kepler-operator-controller-manager
+          --timeout=300s deployment kepler-operator-controller-manager
         oc logs -n openshift-operators \
-        deployment/kepler-operator-controller-manager
+          deployment/kepler-operator-controller-manager
       dependencies:
       - env: OO_BUNDLE
         name: kepler-bundle
@@ -68,7 +69,6 @@ tests:
         requests:
           cpu: 100m
           memory: 400Mi
-    - ref: openshift-power-monitoring-install-kepler
     - ref: openshift-power-monitoring-tests-kepler
     workflow: generic-claim
 zz_generated_metadata:
