--- a/ci-operator/jobs/openshift-power-monitoring/kepler-operator/openshift-power-monitoring-kepler-operator-v1alpha1-presubmits.yaml
+++ b/ci-operator/jobs/openshift-power-monitoring/kepler-operator/openshift-power-monitoring-kepler-operator-v1alpha1-presubmits.yaml
@@ -15,6 +15,7 @@ presubmits:
       job-release: "4.13"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-power-monitoring-kepler-operator-v1alpha1-ci-index-kepler-bundle
+    path_alias: github.com/sustainable-computing-io/kepler-operator
     rerun_command: /test ci-index-kepler-bundle
     spec:
       containers:
@@ -65,6 +66,7 @@ presubmits:
       job-release: "4.13"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-power-monitoring-kepler-operator-v1alpha1-images
+    path_alias: github.com/sustainable-computing-io/kepler-operator
     rerun_command: /test images
     spec:
       containers:
@@ -115,6 +117,7 @@ presubmits:
       job-release: "4.13"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-power-monitoring-kepler-operator-v1alpha1-kepler-operator-e2e
+    path_alias: github.com/sustainable-computing-io/kepler-operator
     rerun_command: /test kepler-operator-e2e
     spec:
       containers:
