--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.13__amd64-stable.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.13__amd64-stable.yaml
@@ -240,14 +240,14 @@ tests:
   steps:
     cluster_profile: aws-sd-qe
     env:
-      ENABLE_SECTOR: "true"
       E2E_RUN_TAGS: '@amd64 and @aws-ipi and @rosa and @network-ovnkubernetes and
         @hypershift-hosted and @critical and not @fips'
+      ENABLE_SECTOR: "true"
       OCM_LOGIN_ENV: integration
       OPENSHIFT_VERSION: "4.12"
       REGION: eu-west-3
       ROSA_LOGIN_ENV: integration
-      SLEEP_DURATION: "2h"
+      SLEEP_DURATION: 2h
       TAG_VERSION: '@4.12'
       TEST_FILTERS: ~ChkUpgrade&;~NonPreRelease&;~Serial&;~Disruptive&;~DisconnectedOnly&;~HyperShiftMGMT&;~MicroShiftOnly&;~NonHyperShiftHOST&;ROSA&
       TEST_IMPORTANCE: Critical
