--- a/ci-operator/step-registry/openshift-qe/concurrent-builds/openshift-qe-concurrent-builds-ref.yaml
+++ b/ci-operator/step-registry/openshift-qe/concurrent-builds/openshift-qe-concurrent-builds-ref.yaml
@@ -27,7 +27,7 @@ ref:
     documentation: |-
       Define the maximum number of pods to deploy on each labeled node.
   - name: OUTPUT_FILE
-    default: "kube-burner-ocp.out"
+    default: "kube-burner.out"
     documentation: |-
       File in which we will parse to find uuid, start and end time
   documentation: >-
