--- a/ci-operator/config/opendatahub-io/notebooks/opendatahub-io-notebooks-2023a.yaml
+++ b/ci-operator/config/opendatahub-io/notebooks/opendatahub-io-notebooks-2023a.yaml
@@ -220,6 +220,16 @@ tests:
       IMAGE_TAG: YearIndex
       RELEASE_VERSION: cuda-jupyter-tensorflow-ubi8-python-3.8-2023a
     workflow: opendatahub-io-ci-image-mirror
+- as: notebook-jupyter-trustyai-ubi8-python-3-8-image-mirror
+  postsubmit: true
+  steps:
+    dependencies:
+      SOURCE_IMAGE_REF: jupyter-trustyai-ubi8-python-3.8
+    env:
+      IMAGE_REPO: workbench-images
+      IMAGE_TAG: YearIndex
+      RELEASE_VERSION: jupyter-trustyai-ubi8-python-3.8-2023a
+    workflow: opendatahub-io-ci-image-mirror
 - as: runtime-minimal-ubi8-python-3-8-image-mirror
   postsubmit: true
   steps:
