--- a/ci-operator/step-registry/ovn/conf/vsphere-dualstack/ovn-conf-vsphere-dualstack-ref.yaml
+++ b/ci-operator/step-registry/ovn/conf/vsphere-dualstack/ovn-conf-vsphere-dualstack-ref.yaml
@@ -11,6 +11,6 @@ ref:
       memory: 100Mi
   env:
     - name: IP_FAMILIES
-      default: "DualStackIPv6Primary"
+      default: "DualStack"
   documentation: |-
     The ovn dualstack conf step adds the configuration for dualstack to set of manifests for installation
