set cluster-infrastructure vshpere internal cidr

--- a/ci-operator/step-registry/ipi/install/install/ipi-install-install-ref.yaml
+++ b/ci-operator/step-registry/ipi/install/install/ipi-install-install-ref.yaml
@@ -1,6 +1,6 @@
 ref:
   as: ipi-install-install
-  from: installer
+  from: upi-installer
   grace_period: 10m
   commands: ipi-install-install-commands.sh
   cli: latest
